# ds

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  .prettierrc.json  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.cmake.in  Dockerfile  Doxyfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  cspell.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  cmake.yml  codeql.yml  doxygen.yml  static.yml
docs/html/: alloc_8c.html  alloc_8c.js  alloc_8c__incl.md5  alloc_8c_source.html  alloc_8h.html  alloc_8h.js  alloc_8h__dep__incl.md5  alloc_8h__incl.md5  alloc_8h_source.html  annotated.html  annotated_dup.js  char_8c.html  char_8c.js  char_8c__incl.md5  char_8c_a02834d689c11586dfd63cfb5c5af6ec3_cgraph.md5  char_8c_a1e1289b7cecd55f4fb932418d093e8ab_cgraph.md5  char_8c_a24c097e7e8fc5fb63133cfb6a3f84587_cgraph.md5  char_8c_a349af3c98a6fb7cdeff001119743c1ca_cgraph.md5  char_8c_a61380babe759ddeea94ee96a230e0916_icgraph.md5  char_8c_a643fe0b72862983c36a6b61ad57c1cfe_cgraph.md5  char_8c_a6bbbed2e3dec7ed2aa9eff0683f2f351_cgraph.md5  char_8c_a6bbbed2e3dec7ed2aa9eff0683f2f351_icgraph.md5  char_8c_a800be38168fd75c1505b935a62d2f9ae_icgraph.md5  char_8c_a8385de1c37e3dfa511ca0ebdec5ed29d_cgraph.md5  char_8c_a988ae15b4f6c55c6b664caae27082ac1_cgraph.md5  char_8c_a9da93370b843c312fc7fae6a373c4206_cgraph.md5  char_8c_aca6506a9db8ce783cac59d28def15b17_cgraph.md5  char_8c_addb2c2f7cdda91ae57f50b84a55af573_cgraph.md5  char_8c_addb2c2f7cdda91ae57f50b84a55af573_icgraph.md5  char_8c_source.html  char_8h.html  char_8h.js  char_8h__dep__incl.md5  char_8h__incl.md5  char_8h_a119f494ae625a456bb4e62b3a0f78391_cgraph.md5  char_8h_a1463f455ab57b0671638e381a2a85d26_cgraph.md5  char_8h_a56c6c6cbf8bb5eb5e06e29961cfd0cf1_cgraph.md5  char_8h_a682fb8a7ff2098b9de6feab90fe28bf2_cgraph.md5  char_8h_a682fb8a7ff2098b9de6feab90fe28bf2_icgraph.md5  char_8h_a6d9242880df4717ee13d29c95a33c2f8_cgraph.md5  (+140 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_3.js  files_5.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js
docs/latex/: alloc_8c.tex  alloc_8c__incl.md5  alloc_8c_source.tex  alloc_8h.tex  alloc_8h__dep__incl.md5  alloc_8h__incl.md5  alloc_8h_source.tex  annotated.tex  char_8c.tex  char_8c__incl.md5  char_8c_a02834d689c11586dfd63cfb5c5af6ec3_cgraph.md5  char_8c_a02834d689c11586dfd63cfb5c5af6ec3_icgraph.md5  char_8c_a1e1289b7cecd55f4fb932418d093e8ab_cgraph.md5  char_8c_a24c097e7e8fc5fb63133cfb6a3f84587_cgraph.md5  char_8c_a349af3c98a6fb7cdeff001119743c1ca_cgraph.md5  char_8c_a61380babe759ddeea94ee96a230e0916_icgraph.md5  char_8c_a643fe0b72862983c36a6b61ad57c1cfe_cgraph.md5  char_8c_a6bbbed2e3dec7ed2aa9eff0683f2f351_cgraph.md5  char_8c_a6bbbed2e3dec7ed2aa9eff0683f2f351_icgraph.md5  char_8c_a800be38168fd75c1505b935a62d2f9ae_cgraph.md5  char_8c_a8385de1c37e3dfa511ca0ebdec5ed29d_cgraph.md5  char_8c_a8385de1c37e3dfa511ca0ebdec5ed29d_icgraph.md5  char_8c_a988ae15b4f6c55c6b664caae27082ac1_cgraph.md5  char_8c_aca6506a9db8ce783cac59d28def15b17_cgraph.md5  char_8c_addb2c2f7cdda91ae57f50b84a55af573_cgraph.md5  char_8c_addb2c2f7cdda91ae57f50b84a55af573_icgraph.md5  char_8c_source.tex  char_8h.tex  char_8h__dep__incl.md5  char_8h__incl.md5  char_8h_a119f494ae625a456bb4e62b3a0f78391_cgraph.md5  char_8h_a1463f455ab57b0671638e381a2a85d26_cgraph.md5  char_8h_a56c6c6cbf8bb5eb5e06e29961cfd0cf1_cgraph.md5  char_8h_a56c6c6cbf8bb5eb5e06e29961cfd0cf1_icgraph.md5  char_8h_a682fb8a7ff2098b9de6feab90fe28bf2_cgraph.md5  char_8h_a682fb8a7ff2098b9de6feab90fe28bf2_icgraph.md5  char_8h_a6d9242880df4717ee13d29c95a33c2f8_cgraph.md5  char_8h_a909932a31d20457ee7765543113c2493_cgraph.md5  char_8h_aa0bffbb96f997d839b69ca28f8e0e43e_cgraph.md5  char_8h_aa0bffbb96f997d839b69ca28f8e0e43e_icgraph.md5  (+99 more)
include/ds/: alloc.h  char.h  cstr.h  helpers.h  result.h  string.h  usize.h
src/ds/: alloc.c  char.c  cstr.c  helpers.c  result.c  string.c  usize.c
templates/doxygen/: header.html  style.css
tests/: CMakeLists.txt
tests/test_ds/: test_alloc.cpp  test_char.cpp  test_cstr.cpp  test_helpers.cpp  test_result.cpp  test_string.cpp  test_usize.cpp
